--- a/app/src/main/res/layout/memo.xml
+++ b/app/src/main/res/layout/memo.xml
@@ -22,18 +22,18 @@
     <TextView
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
-        android:gravity="right"
-        app:layout_constraintWidth_min="100dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
+        android:gravity="right"
         android:padding="8dp"
         android:text="Title of memo"
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_min="100dp" />
 
     <TextView
         android:id="@+id/infoTextView"
@@ -43,9 +43,9 @@
         android:padding="8dp"
         android:text="TIME 00;00;00"
         android:textSize="18dp"
-        app:layout_constraintRight_toLeftOf="@id/playButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/titleView"/>
+        app:layout_constraintLeft_toRightOf="@id/titleView"
+        app:layout_constraintRight_toLeftOf="@id/playButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
