--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,7 +12,8 @@
         tools:layout="@layout/fragment_dashboard" >
         <action
             android:id="@+id/action_dashboard_to_recordingFragment"
-            app:destination="@id/recordingFragment" />
+            app:destination="@id/recordingFragment"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/recordingFragment"
@@ -22,7 +23,6 @@
         <action
             android:id="@+id/action_recordingFragment_to_dashboard"
             app:destination="@id/dashboard"
-            app:launchSingleTop="false"
-            app:popUpToInclusive="false" />
+            app:launchSingleTop="true" />
     </fragment>
 </navigation>
