--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,8 +12,7 @@
         tools:layout="@layout/fragment_dashboard" >
         <action
             android:id="@+id/action_dashboard_to_recordingFragment"
-            app:destination="@id/recordingFragment"
-            app:launchSingleTop="true" />
+            app:destination="@id/recordingFragment" />
     </fragment>
     <fragment
         android:id="@+id/recordingFragment"
@@ -22,7 +21,6 @@
         tools:layout="@layout/fragment_add_memo" >
         <action
             android:id="@+id/action_recordingFragment_to_dashboard"
-            app:destination="@id/dashboard"
-            app:launchSingleTop="true" />
+            app:destination="@id/dashboard" />
     </fragment>
 </navigation>
